objects/Q4__Qvidian_Play_Content__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Content_Identifier__c</fullName>
        <label>Content Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Content_Name__c</fullName>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Content_Provider__c</fullName>
        <label>Content Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Content_Source__c</fullName>
        <label>Content Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Contentusagecount__c</fullName>
        <label>Content usage count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__Play_CompletedBy_FullName__c</fullName>
        <label>Play_Completed By: Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Play_DateCompleted__c</fullName>
        <label>Play_Date Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Play_Description__c</fullName>
        <label>Play_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Play_FileUploadName__c</fullName>
        <label>Play_File UploadName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Play_PlayStatus__c</fullName>
        <label>Play_Play Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Play_PlaybookStage__c</fullName>
        <label>Play_Playbook Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Playbook_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook Id</label>
        <referenceTo>Q4__Qvidian_Playbook_Instance__c</referenceTo>
        <relationshipName>Play_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Play_Content_Id__c</fullName>
        <externalId>true</externalId>
        <label>[Obsolete] Qvidian Play Content Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Play_Content_Identifier__c</fullName>
        <description>Uniquely identifies the records from the Qvidian system that are joined together to form this object&apos;s data.</description>
        <externalId>true</externalId>
        <label>Qvidian Play Content Identifier</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Qvidian Play Content</label>
    <nameField>
        <label>Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qvidian Play Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>